--- a/google/ads/googleads/v8/errors/BUILD.bazel
+++ b/google/ads/googleads/v8/errors/BUILD.bazel
@@ -35,6 +35,20 @@ proto_library(
 )
 
 ##############################################################################
+# Go
+##############################################################################
+load(
+    "@com_google_googleapis_imports//:imports.bzl",
+    "go_proto_library",
+)
+
+go_proto_library(
+    name = "errors_go_proto",
+		importpath = "google.golang.org/genproto/googleapis/ads/googleads/v8/errors",
+    protos = [":errors_proto"],
+)
+
+##############################################################################
 # Java
 ##############################################################################
 load(
