--- a/google/ads/googleads/v8/resources/BUILD.bazel
+++ b/google/ads/googleads/v8/resources/BUILD.bazel
@@ -38,6 +38,20 @@ proto_library(
 )
 
 ##############################################################################
+# Go
+##############################################################################
+load(
+    "@com_google_googleapis_imports//:imports.bzl",
+    "go_proto_library",
+)
+
+go_proto_library(
+    name = "resources_go_proto",
+		importpath = "google.golang.org/genproto/googleapis/ads/googleads/v8/resources",
+    protos = [":resources_proto"],
+)
+
+##############################################################################
 # Java
 ##############################################################################
 load(
